--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 * {
   /* border-top: 10px solid #1098ad; */
-  margin: 0;
+  margin: 5;
   padding: 0;
   box-sizing: border-box;
 }
 
 /* page sections */
-
 body {
   font-family: sans-serif;
   color: #444;
@@ -16,357 +15,67 @@ body {
 }
 
 .container {
-  width: 1200px;
-  /* margin-left: auto;
-  margin-right: auto; */
-  margin: 0 5px;
+  display: grid;
+  grid-template-columns: 1fr 450px;
+  column-gap: 50px;
+  row-gap: 30px;
 }
 
 .main-header {
   background-color: #f7f7f7;
-  /* padding: 20px;
-  padding-left: 40px;
-  padding-right: 40px; */
-  padding: 20px 40px;
-  /* margin-bottom: 60px; */
-  /* height: 80px; */
+  padding: 20px 20px;
+  grid-column: 1 / span 2;
+  justify-items: center;
 }
 
-nav {
-  font-size: 18px;
-}
-
-.post-header {
-  margin-bottom: 40px;
-}
-
-/* article {
-  margin-bottom: 60px;
-} */
-
-/* smaller elements */
-h1,
-h2,
-h3 {
-  color: #1098ad;
+.content {
+  padding-top: 5px;
 }
 
 h1 {
-  font-size: 26px;
-  text-transform: uppercase;
-  font-style: italic;
-}
-
-h2 {
-  font-size: 40px;
-  margin-bottom: 30px;
-}
-
-h3 {
   font-size: 30px;
-  margin-bottom: 20px;
-  margin-top: 40px;
-}
-
-h4 {
-  font-size: 20px;
-
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 30px;
 }
-
-p {
-  font-size: 22px;
-  line-height: 1.5;
-  margin-bottom: 15px;
-}
-
-ul,
-ol {
-  margin-left: 50px;
-  margin-bottom: 20px;
-}
-
-li {
-  font-size: 20px;
-  margin-bottom: 10px;
-  /* display: inline; */
-}
-
-/* footer p {
-  font-size: 16px;
-} */
-
-/* article header p {
-  font-style: italic;
-} */
 
 #author {
   font-style: italic;
-  font-size: 18px;
+  font-size: 15px;
+  text-align: right;
 }
 
-#copyright {
-  font-size: 16px;
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #1098ad;
+  font-size: 25px;
 }
 
-.related-author {
-  font-size: 18px;
-  font-weight: bold;
-}
+body {
+  font-family: sans-serif;
+  color: #444;
 
-.related-posts {
-  list-style: none;
-  margin-left: 0;
+  border-top: 10px solid #1098ad;
+  position: relative;
 }
 
 aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
-  padding: 50px 0;
-}
-
-/* body {
-  background-color: orangered;
-} */
-
-/* .first-li {
-  font-weight: bold;
-} */
-
-li:first-child {
-  font-weight: bold;
-}
-
-li:last-child {
-  font-style: italic;
-  margin-bottom: 0;
-}
-
-/* 
-li:nth-child(even) {
-  /* color: red; */
-
-/* misconception
-article p:first-child {
-  color: red;
-} */
-
-/* Styling links */
-
-nav a:link {
-  /* background-color: orangered;
-  margin: 20px;
-  padding: 20px;
-
-  display: block; */
-  margin-right: 30px;
-  /* margin-top: 10px; */
-  display: inline-block;
-}
-
-nav a:link:last-child {
-  margin-right: 0;
-}
-
-button {
-  font-size: 22px;
-  padding: 20px;
-  cursor: pointer;
-
-  position: absolute;
-  /* bottom: 50px;
-  left: 50px; */
-
-  bottom: 50px;
-  right: 50px;
-}
-
-h1::first letter {
-  font-style: normal;
-  margin-right: 5px;
-}
-
-h3 + p::first-line {
-  /* color: red; */
-}
-
-h2 {
-  position: relative;
-}
-
-h2::after {
-  content: "TOP";
-  background-color: yellow;
-  color: #000;
-  font-size: 16px;
-  font-weight: bold;
-  display: inline-block;
-  padding: 5px 10px;
-  position: absolute;
-  top: 0;
-  right: -10px;
-}
-
-a:link {
-  color: #1098ad;
-  text-decoration: none;
-}
-
-/* a:visited {
-  color: #777;
-} */
-
-a:hover {
-  color: orangered;
-  font-style: bold;
-  text-decoration: underline wavy orangered;
-}
-
-a:active {
-  background-color: black;
-  font-style: italic;
-}
-
-.post-img {
-  width: 100%;
-  height: auto;
-}
-
-/* LVHA */
-/* resloving conflicts */
-
-/* #copyright {
-  color: red;
-}
-
-.copyright {
-  color: blue;
-}
-
-.text {
-  color: yellow;
-}
-/* 
-footer p {
-  color: green !important; */
-
-/* FLOATS */
-/* .author-img {
-  float: left;
-  margin-bottom: 20px;
-}
-
-.author {
-  /* padding-left: 100px; */
-/* float: left;
-  margin-top: 10px;
-  margin-left: 20px;
-}
-
-h1 {
-  float: left;
-}
-
-nav {
-  float: right;
-}
-
-.clear {
-  clear: both;
-}
-
-.clearfix::after {
-  content: "";
+  padding: 30px 0;
   display: block;
-  clear: both;
+  height: fit-content;
 }
 
-article {
-  width: 800px;
-  float: left;
-}
-
-aside {
-  width: 300px;
-  float: right;
-}
-
-footer {
-  clear: both;
-} */
-
-/* FLEXBOX */
-.main-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.author-box {
-  display: flex;
-  align-items: center;
-  margin-bottom: 15px;
-}
-
-.author {
-  margin-bottom: 0;
-  margin-left: 15px;
-}
-
-.related-po {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  margin-bottom: 30px;
-}
-
-.related-link:link {
-  font-size: 17px;
+header {
+  font-size: 20px;
   font-weight: bold;
-  font-style: normal;
-  margin-bottom: 5px;
-  display: block;
+  margin-bottom: 10px;
 }
 
-.related-author {
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: normal;
+li {
   font-style: italic;
-}
-/* Flexbox Layout */
-/* .row {
-  display: flex;
-  align-items: flex-start;
-  gap: 75px;
-  margin-bottom: 60px;
-}
-
-article {
-  flex: 0 0 825px;
-  margin-bottom: 0;
-}
-
-aside {
-  flex: 0 0 300px;
-} */
-
-/* CSS Grid Layout */
-.container {
-  display: grid;
-  grid-template-columns: 1fr 300px;
-  column-gap: 75px;
-  row-gap: 60px;
-  align-items: start;
-}
-
-.main-header {
-  grid-column: 1 / span 2;
-}
-
-footer {
-  grid-column: 1/-1;
 }
